--- a/package.json
+++ b/package.json
@@ -1,16 +1,50 @@
 {
-  "name": "react-wty",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4"
-  },
+  "name": "debug-nova",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode development --config build/webpack.config.js",
+    "start": "webpack-dev-server  --config build/webpack.config.js",
+    "server": "node server.js",
+    "dev": "webpack-dev-server  --mode development --config build/webpack.config.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@git.xiaojukeji.com:wangtianyuwangtianyu/debug-nova.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-loose": "^8.0.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "body-parser": "^1.18.2",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
+    "express": "^4.16.3",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^3.0.7",
+    "less": "^2.7.2",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.3.0",
+    "mockjs": "^1.0.1-beta3",
+    "style-loader": "^0.20.3",
+    "webpack": "4.6.0",
+    "webpack-cli": "2.0.15",
+    "webpack-dev-middleware": "^2.0.5",
+    "webpack-dev-server": "^2.7.1",
+    "webpack-hot-middleware": "^2.22.0"
+  },
+  "dependencies": {
+    "antd": "^3.4.1",
+    "babel-plugin-import": "^1.7.0",
+    "react": "16.3.2",
+    "react-dom": "16.3.2"
   }
 }
